# mcp-server-silentinstallhq

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
src/silentinstallhq_mcp/: __init__.py  __main__.py  cache.py  config.py  http_client.py  models.py  rate_limiter.py  robots.py  server.py  structured_cache.py
src/silentinstallhq_mcp/psadt/: __init__.py  generator.py
src/silentinstallhq_mcp/scraper/: __init__.py  client.py  parser.py
src/silentinstallhq_mcp/tools/: __init__.py  guides.py
tests/: test_cache.py  test_parser.py  test_psadt_generator.py  test_robots.py  test_structured_cache.py
tests/fixtures/: cisco-proximity-how-to.html
