[project]
name = "mcp-server-silentinstallhq"
version = "0.1.0"
description = "MCP server for querying Silent Install HQ silent install guides and PSADT templates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "perezdap" }]
keywords = ["mcp", "silent-install", "psadt", "intune", "sccm"]
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
silentinstallhq-mcp = "silentinstallhq_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silentinstallhq_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/silentinstallhq_mcp", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]